Add critical field features